plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.fas'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(11)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation files('src/main/resources/libs/opencv-4100.jar') // OpenCV JAR 파일 경로 확인
	// 나머지 의존성 설정
}
tasks.withType(JavaExec) {
	systemProperty "java.library.path", "/src/main/resources/libs"
}

test {
	systemProperty "java.library.path", "/src/main/resources/libs" // 네이티브 라이브러리 위치로 변경
}
tasks.named('test') {
	useJUnitPlatform()
}
